# PROYECTO_FINAL_ICC

./: README
CODIGOS_CLASES/: CMakeLists.txt  arco.cpp  arco.h  cargar.cpp  cargar.h  control.cpp  control.h  controler.cpp  controler.h  estadio.cpp  estadio.h  glad.c  grafica.cpp  grafica.h  juga.cpp  juga.h  jugador.cpp  jugador.h  main.cpp  main_antiguo.cpp  model.cpp  model.h  movimiento.cpp  movimiento.h  movimiento_jugador.cpp  movimiento_jugador.h  movimiento_pelota.cpp  movimiento_pelota.h  pantalla.cpp  pantalla.h  pelota.cpp  pelota.h  proof1  proof2  proof3  proof4  proof5  proof6  proof7  proof8  (+3 more)
LATEX/FinalProyectCS/: main.tex
